--- a/test/src/main/res/layout/activity_main.xml
+++ b/test/src/main/res/layout/activity_main.xml
@@ -15,5 +15,10 @@
         android:layout_height="wrap_content"
         android:text="打电话"/>
 
+    <Button android:id="@+id/picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="自定义的多选框"/>
+
 
 </LinearLayout>
